# maze-runner

./: .gitignore  dados_lidar.csv  dados_lidar_old2.csv  dados_lidar_old3.csv  dados_lidar_old4.csv  dados_lidar_old5.csv  dados_lidar_old6.csv  dados_lidar_old7.csv  dados_lidar_old8.csv  dados_lidar_old9.csv  dados_lidar_old_10.csv  dados_lidar_old_11.csv  dados_lidar_old_13.csv  dados_lidar_old_9.csv  funcs.zsh  generate_radar.py  laser.py  lidar.py  main.py  requirements.txt  test_vhf.py
motor/: motors_driver.py
old_assets/: dados_lidar.csv  dados_lidar_3.csv  dados_lidar_4.csv  dados_lidar_5.csv  dados_lidar_6.csv  dados_lidar_7.csv  dados_lidar_8.csv  dados_lidar_old.csv  driver.py  laser.py
ros/install/: local_setup.sh  setup.sh
ros/log/: latest_build
ros/src/drivers/: package.xml  setup.py
ros/src/drivers/drivers/: ControladorBase.py  ManualTimedMove.py  TimedMove.py  TimedMoveService.py
ros/src/drivers/drivers/motor/: gpio.py  motors_driver.py  pd.py
ros/src/lidar/: package.xml  setup.py
ros/src/lidar/lidar/: ControladorLidar.py  main.py
ros/src/lidar/lidar/logics/: lidar.py  lidar_integration.py
ros/src/navigator/: package.xml  setup.py
ros/src/navigator/navigator/: ControladorRobo.py
ros/src/project_interfaces/: CMakeLists.txt  package.xml
ros/src/project_interfaces/srv/: LidarResponse.srv  TimedMoveResponse.srv
teste/: gpio.py  teste.py  teste2.py
