<?xml version="1.0"?>
<package format="3">
  <name>project_interfaces</name>
  <version>0.0.0</version>
  <description>Pacote de interfaces personalizadas para ROS 2</description>
  <maintainer email="ikts@todo.todo">ikts</maintainer>
  <license>Apache-2.0</license>

  <!-- Indica que é um pacote de interfaces ROSIDL -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Dependências para build e execução -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Dependências para testes -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rosidl_interface_packages/>
  </export>
</package>
